kubernetes/apps/harvester/kubernetes.yml
kind: Namespace
apiVersion: v1
metadata:
  name: harvester
  labels:
    name: harvester
---
apiVersion: v1
kind: Pod
metadata:
  namespace: harvester
  name: harvester-local-pod
  labels:
    component: harvester
    env: local
spec:
  containers:
    - name: harvester-local
      image: harvester/harvester:latest
      ports:
        - containerPort: 4000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: harvester
  name: harvester-local-deployment
  labels:
    app: harvester-local
    env: local
spec:
  replicas: 3
  selector:
    matchLabels:
      app: harvester-local
      env: local
  template:
    metadata:
      labels:
        app: harvester-local
        env: local
    spec:
      containers:
        - name: harvester-local
          image: harvester/harvester:latest
          ports:
            - containerPort: 4000
---
apiVersion: v1
kind: Service
metadata:
  namespace: harvester
  name: harvester-local-node-port
spec:
  type: NodePort
  selector:
    app: harvester-local
    env: local
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 4000
    - name: https
      protocol: TCP
      port: 443
      targetPort: 4001
