kubernetes/apps/harvester/kubernetes.prod.yml
kind: Namespace
apiVersion: v1
metadata:
  name: harvester
  labels:
    name: harvester
---
apiVersion: v1
kind: Pod
metadata:
  namespace: harvester
  name: harvester-prod-pod
  labels:
    component: harvester
    env: prod
spec:
  imagePullSecrets:
    - name: regcred
  containers:
    - name: harvester-prod
#      readinessProbe:
#        httpGet:
#          path: /
#          port: 80
#        initialDelaySeconds: 20
#        periodSeconds: 3
      image: ghcr.io/robin-rpr/harvester-prod:latest
      ports:
        - containerPort: 4000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: harvester
  name: harvester-prod-deployment
  labels:
    app: harvester-prod
    env: prod
spec:
  replicas: 3
  selector:
    matchLabels:
      app: harvester-prod
      env: prod
  template:
    metadata:
      labels:
        app: harvester-prod
        env: prod
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
        - name: harvester-prod
          image: ghcr.io/robin-rpr/harvester-prod:latest
          ports:
            - containerPort: 4000
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: harvester-prod-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
  namespace: harvester
  labels:
      app: ingress
      env: prod
spec:
  rules:
  - host: harvester.dev
    http:
      paths:
      - backend:
          serviceName: harvester-prod-node-port
          servicePort: 4000
