kubernetes/apps/harvester/kubernetes.staging.yml
kind: Namespace
apiVersion: v1
metadata:
  name: harvester
  labels:
    name: harvester
---
apiVersion: v1
kind: Pod
metadata:
  namespace: harvester
  name: harvester-staging-pod
  labels:
    component: harvester
    env: staging
spec:
  imagePullSecrets:
    - name: regcred
  containers:
    - name: harvester-staging
#      readinessProbe:
#        httpGet:
#          path: /
#          port: 80
#        initialDelaySeconds: 20
#        periodSeconds: 3
      image: ghcr.io/robin-rpr/harvester-staging:latest
      ports:
        - containerPort: 4000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: harvester
  name: harvester-staging-deployment
  labels:
    app: harvester-staging
    env: staging
spec:
  replicas: 3
  selector:
    matchLabels:
      app: harvester-staging
      env: staging
  template:
    metadata:
      labels:
        app: harvester-staging
        env: staging
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
        - name: harvester-staging
          image: ghcr.io/robin-rpr/harvester-staging:latest
          ports:
            - containerPort: 4000
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: harvester-staging-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
  namespace: harvester
  labels:
      app: ingress
      env: staging
spec:
  rules:
  - host: staging.harvester.dev
    http:
      paths:
      - path: /.*
        backend:
          serviceName: harvester-staging-node-port
          servicePort: 4000
